<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mikolajgralczyk.mior.EmergencyNumbers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleEmergencyNumbersTextView"
        android:id="@+id/titleEmergencyNumbersTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtitleEmergencyNumbersTextView"
        android:id="@+id/subtitleEmergencyNumbersTextView"
        android:layout_below="@+id/titleEmergencyNumbersTextView"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitleEmergencyNumbersTextView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callFireBrigadeButton"
            android:id="@+id/callFireBrigadeButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callAmbulanceButton"
            android:id="@+id/callAmbulanceButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callPoliceButton"
            android:id="@+id/callPoliceButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callCEZARButton"
            android:id="@+id/callCEZARButton"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
