<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mikolajgralczyk.theory.RulesAndTheory">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleRulesAndTheoryTextView"
        android:id="@+id/titleRulesAndTheoryTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/titleRulesAndTheoryTextView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dosesDefinitionsMainButton"
            android:id="@+id/dosesDefinitionsMainButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doseLimitsMainButton"
            android:id="@+id/doseLimitsMainButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wasteMainButton"
            android:id="@+id/wasteMainButton"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glossaryMainButton"
            android:id="@+id/glossaryMainButton"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</RelativeLayout>
