<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mikolajgralczyk.mior.DosesDefinitions">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleDosesDefinitionsTextView"
        android:id="@+id/titleDosesDefinitionsTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtitleDosesDefinitionsTextView"
        android:id="@+id/subtitleDosesDefinitionsTextView"
        android:layout_below="@+id/titleDosesDefinitionsTextView"
        android:layout_centerHorizontal="true"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:id="@+id/gridLayout"
        android:layout_gravity="center"
        android:layout_below="@+id/subtitleDosesDefinitionsTextView"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/dosesDefinitionsButton1"
            android:id="@+id/dosesDefinitionsButton1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/dosesDefinitionsButton2"
            android:id="@+id/dosesDefinitionsButton2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/dosesDefinitionsButton3"
            android:id="@+id/dosesDefinitionsButton3"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/dosesDefinitionsButton4"
            android:id="@+id/dosesDefinitionsButton4"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"/>
    </GridLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:id="@+id/doseTitleTextView"
            android:layout_below="@+id/scrollView"
            android:layout_centerHorizontal="true"/>

    </ScrollView>

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webView"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
