<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mikolajgralczyk.mior.InternalExposureForEmployees">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleInternalExposureForE"
        android:id="@+id/titleInternalExposureForE"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewForIEE"
        android:layout_below="@+id/titleInternalExposureForE"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleInternalExposureForE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/chooseWayOfAbsorbingForETextView"
                android:id="@+id/chooseWayOfAbsorbingForETextView"
                android:layout_gravity="center_horizontal"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseWayOfAbsorbingForESpinner"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/chooseAtomForETextView"
                android:id="@+id/chooseAtomForETextView"
                android:layout_gravity="center_horizontal"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseAtomForESpinner"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enterActivityForETextView"
                android:id="@+id/enterActivityForETextView"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                android:ems="10"
                android:id="@+id/enterActivityForEEditText"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countInternalExposureForEButton"
                android:id="@+id/countInternalExposureForEButton"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/answerOfInternalExposureForE"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
