<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mikolajgralczyk.mior.UnitCounter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainUnitCalculationTextView"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1UnitCounter"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enterAmountUnitCounterTextView"
        android:id="@+id/textView6"
        android:layout_below="@+id/spinner1UnitCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enterAmountEditText"
        android:layout_below="@+id/spinner1UnitCounter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/defaultNumberInEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chooseUnitTextView"
        android:id="@+id/textView7"
        android:layout_below="@+id/enterAmountEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2UnitCounter"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/enterAmountEditText"
        android:layout_alignStart="@+id/enterAmountEditText"
        android:spinnerMode="dropdown"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateButton"
        android:id="@+id/calculateUnitButton"
        android:layout_below="@+id/spinner2UnitCounter"
        android:layout_centerHorizontal="true"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculateUnitButton"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="3"
        android:id="@+id/unitCounterGridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView1"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView3"
            android:layout_row="1"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView4"
            android:layout_row="1"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView5"
            android:layout_row="2"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView2"
            android:layout_row="0"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/unitTextView6"
            android:layout_row="2"
            android:layout_column="2"/>
    </GridLayout>

</RelativeLayout>
